--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div id="results" class="results"></div>
     </div>
 
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1691.0.min.js"></script>
     <script src="config.js"></script>
     <script src="app.js"></script>
 </body>
